create scss files

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
       />
       <!-- Custom styles -->
       <link rel="stylesheet" href="./css/styles.css" />
+      <!-- Custom styles -->
+    <link rel="stylesheet" href="./css/main.min.css" />
    </head>
    <body>
       <!-- Шапка сайту -->
