--- a/portfolio.html
+++ b/portfolio.html
@@ -27,35 +27,39 @@
    <body>
       <!-- Шапка сайту -->
       <header class="header">
-         <div class="container navigation">
+         <div class="container header-container">
             <nav class="navigation">
                <a class="logo" href="./index.html" aria-label="лаготип сайта" lang="en"
                   ><span>Web</span>Studio</a
                >
                <ul class="header-list list">
-                  <li class="item">
-                     <a class="site-link link" href="./index.html">Студия</a>
+                  <li class="header-list__item">
+                     <a class="header-list__link link" href="./index.html">Студия</a>
                   </li>
-                  <li class="item">
-                     <a class="site-link link current" href="./portfolio.html">Портфолио</a>
+                  <li class="header-list__item">
+                     <a
+                        class="header-list__link link header-list_link--current"
+                        href="./portfolio.html"
+                        >Портфолио</a
+                     >
                   </li>
-                  <li class="item">
-                     <a class="site-link link" href="#">Контакты</a>
+                  <li class="header-list__item">
+                     <a class="header-list__link link" href="#">Контакты</a>
                   </li>
                </ul>
             </nav>
-            <ul class="header-list contact list">
-               <li class="item contacts-item">
-                  <a class="header-item link" href="mailto:info@devstudio.com">
-                     <svg class="header-item-icon" width="16" height="12">
+            <ul class="contact list">
+               <li class="contacts__item">
+                  <a class="contacts__link link" href="mailto:info@devstudio.com">
+                     <svg class="contacts__icon envelope" width="16" height="12">
                         <use href="./images/sprite.svg#icon-envelope"></use>
                      </svg>
                      info@devstudio.com</a
                   >
                </li>
-               <li class="item contacts-item">
-                  <a class="header-item link" href="tel:+380961111111">
-                     <svg class="header-item-icon" width="10" height="16">
+               <li class="contacts__item">
+                  <a class="contacts__link link" href="tel:+380961111111">
+                     <svg class="contacts__icon" width="10" height="16">
                         <use href="./images/sprite.svg#icon-smartphone"></use>
                      </svg>
                      +38 096 111 11 11</a
