changes specifics section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <header class="header">
          <div class="container header-container">
             <nav class="navigation">
-               <a class="logo" href="./index.html" aria-label="лаготип сайта" lang="en"
+               <a class="logo link" href="./index.html" aria-label="лаготип сайта" lang="en"
                   ><span>Web</span>Studio</a
                >
                <ul class="header-list list">
@@ -66,9 +66,9 @@
       </header>
       <main>
          <!--секція заголовок-->
-         <section class="hero">
+         <section class="hero section">
             <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-            <button type="button" class="button primary" data-modal-open>Заказать услугу</button>
+            <button type="button" class="hero-button" data-modal-open>Заказать услугу</button>
             <div class="backdrop is-hidden" data-modal>
             <div class="modal">
               <button class="modal-button" data-modal-close>
@@ -159,54 +159,54 @@
         </div>
          </section>
          <!--секція особливості-->
-         <section class="specifics">
+         <section class="specifics section">
             <div class="container">
                <h2 class="section-title advantages visually-hidden">особенности</h2>
-               <ul class="feature-list list">
-                  <li class="feature-iteam group">
-                     <div class="feature-iteam-svg-background">
-                        <svg class="feature-iteam-icon" width="70" height="70">
+               <ul class="specifics-list list">
+                  <li class="specifics-list__iteam group">
+                     <div class="container-icon">
+                        <svg class="specifics-list__icon" width="70" height="70">
                            <use href="./images/sprite.svg#icon-antena"></use>
                         </svg>
                      </div>
-                     <h3 class="member-title">Внимание к деталям</h3>
-                     <p class="subtitle">
+                     <h3 class="specifics-list__title">Внимание к деталям</h3>
+                     <p class="specifics-list__subtitle">
                         Идейные соображения, а также начало повседневной работы по формированию
                         позиции.
                      </p>
                   </li>
-                  <li class="feature-iteam clock">
-                     <div class="feature-iteam-svg-background">
-                        <svg class="feature-iteam-icon" width="70" height="70">
+                  <li class="specifics-list__iteam">
+                     <div class="container-icon">
+                        <svg class="specifics-list__icon" width="70" height="70">
                            <use href="./images/sprite.svg#icon-clock"></use>
                         </svg>
                      </div>
-                     <h3 class="member-title">Пунктуальность</h3>
-                     <p class="subtitle">
+                     <h3 class="specifics-list__title">Пунктуальность</h3>
+                     <p class="specifics-list__subtitle">
                         Задача организации, в особенности же рамки и место обучения кадров влечет за
                         собой.
                      </p>
                   </li>
-                  <li class="feature-iteam diagram">
-                     <div class="feature-iteam-svg-background">
-                        <svg class="feature-iteam-icon" width="70" height="70">
+                  <li class="specifics-list__iteam">
+                     <div class="container-icon">
+                        <svg class="specifics-list__icon" width="70" height="70">
                            <use href="./images/sprite.svg#icon-diagram"></use>
                         </svg>
                      </div>
-                     <h3 class="member-title">Планирование</h3>
-                     <p class="subtitle">
+                     <h3 class="specifics-list__title">Планирование</h3>
+                     <p class="specifics-list__subtitle">
                         Равным образом консультация с широким активом в значительной степени
                         обуславливает.
                      </p>
                   </li>
-                  <li class="feature-iteam astronaut">
-                     <div class="feature-iteam-svg-background">
-                        <svg class="feature-iteam-icon" width="70" height="70">
+                  <li class="specifics-list__iteam">
+                     <div class="contacts__icon">
+                        <svg class="specifics-list__icon" width="70" height="70">
                            <use href="./images/sprite.svg#icon-astronaut"></use>
                         </svg>
                      </div>
-                     <h3 class="member-title">Современные технологии</h3>
-                     <p class="subtitle">
+                     <h3 class="specifics-list__title">Современные технологии</h3>
+                     <p class="specifics-list__subtitle">
                         Значимость этих проблем настолько очевидна, что реализация плановых заданий.
                      </p>
                   </li>
