--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
       <header class="header">
          <div class="container header-container">
             <nav class="navigation">
-               <a class="logo" href="./index.html" aria-label="лаготип сайта" lang="en"
+               <a class="logo link" href="./index.html" aria-label="лаготип сайта" lang="en"
                   ><span>Web</span>Studio</a
                >
                <ul class="header-list list">
