--- a/portfolio.html
+++ b/portfolio.html
@@ -19,8 +19,7 @@
          crossorigin="anonymous"
          referrerpolicy="no-referrer"
       />
-      <!-- Custom styles -->
-      <link rel="stylesheet" href="./css/styles.css" />
+
       <!-- Custom styles -->
       <link rel="stylesheet" href="./css/main.min.css" />
    </head>
@@ -29,7 +28,7 @@
       <header class="header">
          <div class="container header-container">
             <nav class="navigation">
-               <a class="logo link" href="./index.html" aria-label="лаготип сайта" lang="en"
+               <a class="logo" href="./index.html" aria-label="лаготип сайта" lang="en"
                   ><span>Web</span>Studio</a
                >
                <ul class="header-list list">
@@ -38,7 +37,7 @@
                   </li>
                   <li class="header-list__item">
                      <a
-                        class="header-list__link link header-list_link--current"
+                        class="header-list__link link header-list__link--current"
                         href="./portfolio.html"
                         >Портфолио</a
                      >
@@ -70,23 +69,25 @@
       </header>
       <main>
          <!--Портфоліо-->
-         <section class="section work">
+         <section class="work section">
             <div class="container">
                <h1 class="portfolio-title visually-hidden">Портфолио</h1>
                <!--Навігація кнопки-->
-               <ul class="filters list">
-                  <li class="btn-main">
-                     <button type="button" class="work-btn current-btn">Все</button>
+               <ul class="work-list list">
+                  <li class="work-list__item">
+                     <button type="button" class="work-list__btn current-btn">Все</button>
                   </li>
-                  <li class="btn-main">
-                     <button type="button" class="work-btn">Веб-сайты</button>
+                  <li class="work-list__item">
+                     <button type="button" class="work-list__btn">Веб-сайты</button>
                   </li>
-                  <li class="btn-main">
-                     <button type="button" class="work-btn">Приложения</button>
+                  <li class="work-list__item">
+                     <button type="button" class="work-list__btn">Приложения</button>
                   </li>
-                  <li class="btn-main"><button type="button" class="work-btn">Дизайн</button></li>
-                  <li class="btn-main">
-                     <button type="button" class="work-btn">Маркетинг</button>
+                  <li class="work-list__item">
+                     <button type="button" class="work-list__btn">Дизайн</button>
+                  </li>
+                  <li class="work-list__item">
+                     <button type="button" class="work-list__btn">Маркетинг</button>
                   </li>
                </ul>
                <ul class="gallery list">
@@ -285,7 +286,7 @@
       <!--підвал сайту-->
       <footer class="footer">
          <!--підвал сайту-->
-         <div class="container">
+         <div class="container join">
             <div class="logo-foot">
                <a
                   class="foot-logo logo foot"
@@ -295,54 +296,56 @@
                   ><span>Web</span>Studio</a
                >
                <address class="adress">
-                  <ul class="footer-adress list">
-                     <li class="item address-list-item">
+                  <ul class="adress-list list">
+                     <li class="adress-list__item">
                         <a
                            href="https://goo.gl/maps/U1DCQBSP9QyuAPN38"
-                           class="footer-adress-contact"
+                           class="adress-list__contact link"
                            target="_blank"
                            rel="noopener noreferrer"
                            >г. Киев, пр-т Леси Украинки, 26</a
                         >
                      </li>
-                     <li class="item address-list-item">
-                        <a class="footer-item" href="mailto:info@devstudio.com"
+                     <li class="adress-list__item">
+                        <a class="adress-list__contact-item link" href="mailto:info@devstudio.com"
                            >info@devstudio.com</a
                         >
                      </li>
-                     <li class="item address-list-item">
-                        <a class="footer-item" href="tel:+380961111111">+38 096 111 11 11</a>
+                     <li class="adress-list__item">
+                        <a class="adress-list__contact-item link" href="tel:+380961111111"
+                           >+38 096 111 11 11</a
+                        >
                      </li>
                   </ul>
                </address>
             </div>
             <div class="footer-social-media-section">
-               <p class="footer-social-media-title">Присоединяйтесь</p>
+               <p class="footer-social-media__title">Присоединяйтесь</p>
                <ul class="media-list list">
-                  <li class="media-item">
-                     <a href="" class="media-link">
-                        <svg class="footer-media-icon" width="20" height="20">
+                  <li class="media-list__item">
+                     <a href="" class="media-list__link link">
+                        <svg class="media-list__icon" width="20" height="20">
                            <use href="./images/sprite.svg#icon-instagram"></use>
                         </svg>
                      </a>
                   </li>
-                  <li class="media-item">
-                     <a href="" class="media-link">
-                        <svg class="footer-media-icon" width="20" height="20">
+                  <li class="media-list__item">
+                     <a href="" class="media-list__link link">
+                        <svg class="media-list__icon" width="20" height="20">
                            <use href="./images/sprite.svg#icon-twitter"></use>
                         </svg>
                      </a>
                   </li>
-                  <li class="media-item">
-                     <a href="" class="media-link">
-                        <svg class="footer-media-icon" width="20" height="20">
+                  <li class="media-list__item">
+                     <a href="" class="media-list__link link">
+                        <svg class="media-list__icon" width="20" height="20">
                            <use href="./images/sprite.svg#icon-facebook"></use>
                         </svg>
                      </a>
                   </li>
-                  <li class="media-item">
-                     <a href="" class="media-link">
-                        <svg class="footer-media-icon" width="20" height="20">
+                  <li class="media-list__item">
+                     <a href="" class="media-list__link link">
+                        <svg class="media-list__icon" width="20" height="20">
                            <use href="./images/sprite.svg#icon-linkedin"></use>
                         </svg>
                      </a>
@@ -356,15 +359,15 @@
                <form class="footer-form">
                   <label for="email"></label>
                   <input
-                     class="footer-form-input"
+                     class="footer-form__input"
                      type="email"
                      name="email"
                      id="email"
                      placeholder="E-mail"
                   />
-                  <button class="footer-form-button" type="submit">
+                  <button class="footer-form__button" type="submit">
                      Подписаться
-                     <svg class="footer-form-icon" width="24" height="24">
+                     <svg class="footer-form__icon" width="24" height="24">
                         <use href="./images/icons.svg#icon-icon-send"></use>
                      </svg>
                   </button>
