--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                      </p>
                   </li>
                   <li class="specifics-list__iteam">
-                     <div class="contacts__icon">
+                     <div class="container-icon">
                         <svg class="specifics-list__icon" width="70" height="70">
                            <use href="./images/sprite.svg#icon-astronaut"></use>
                         </svg>
